--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "dev": "node index.js"
+    "dev": "node index.js",
+    "build": "echo 'Server build complete - no build step needed for Node.js'"
   },
   "dependencies": {
     "express": "^4.18.2",
